# poc-djang-ddd

./: .flake8  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
src/: setup.py
src/account/: admin.py  views.py
src/account/migrations/: 0001_initial.py
src/interface_django/: manage.py  settings.py  wsgi.py
src/interface_django/account/: apps.py  models.py  urls.py  views.py
src/interface_django/interface_django/: asgi.py  settings.py
src/poc_djang_ddd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tests/: test_user_models.py  test_user_services.py
src/users.egg-info/: PKG-INFO  top_level.txt
src/users/adapters/: django_repository.py  repository.py
src/users/core/: commands.py  exceptions.py  models.py  value_object.py
src/users/services/: unit_of_work.py  user_services.py
src/users/tests/: test_django_repo.py  test_repo.py  test_user_models.py  test_user_service_django.py  test_user_services.py
